--- a/server/src/test/java/com/example/Jenkinsfile
+++ b/server/src/test/java/com/example/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
             }
             stage ('build') {
                 steps {
-                    echo "This is Development Satge"
+                    echo "This is Build Satge"
                 }
             }
             stage ('Deploy') {
